--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title> Alpha001 site</title>
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header id="header">
@@ -49,6 +49,11 @@
             </div>
         </article>
 
+        <footer id="footer">
+            copyright 2016 - 2017 
+        </footer>
+
     </body>
-    <script src="/script.js" charset="utf-8"></script>
+
+    <script src="script.js" charset="utf-8"></script>
 </html>
